# backend/src/main/java/com/each17/backend/common/exception/ValidationException.java
@@ -1,0 +1,9 @@
+package com.each17.backend.common.exception;
+
+import org.springframework.http.HttpStatus;
+
+public class ValidationException extends BusinessException {
+    public ValidationException(String message) {
+        super(40001, HttpStatus.BAD_REQUEST, message);
+    }
+}
