# backend/src/main/java/com/each17/backend/dto/ErrorResponseDto.java
@@ -1,15 +1,0 @@
-package com.each17.backend.dto;
-
-import lombok.*;
-
-import java.time.LocalDateTime;
-
-@Data
-@Builder
-@NoArgsConstructor
-@AllArgsConstructor
-public class ErrorResponseDto {
-    private String error;
-    private String message;
-    private LocalDateTime timestamp;
-}
