# backend/src/main/java/com/each17/backend/exception/GlobalExceptionHandler.java
@@ -1,34 +1,0 @@
-package com.each17.backend.exception;
-
-import com.each17.backend.dto.ErrorResponseDto;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.ExceptionHandler;
-import org.springframework.web.bind.annotation.ResponseStatus;
-import org.springframework.web.bind.annotation.RestControllerAdvice;
-
-import java.time.LocalDateTime;
-
-@RestControllerAdvice
-public class GlobalExceptionHandler {
-
-    @ExceptionHandler(RuntimeException.class)
-    @ResponseStatus(HttpStatus.NOT_FOUND)
-    public ErrorResponseDto handleResourceNotFound(RuntimeException ex) {
-        return ErrorResponseDto.builder()
-                .error("NOT_FOUND")
-                .message(ex.getMessage())
-                .timestamp(LocalDateTime.now())
-                .build();
-    }
-
-    @ExceptionHandler(Exception.class)
-    @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ErrorResponseDto handleValidationExceptions(Exception ex) {
-        return ErrorResponseDto.builder()
-                .error("BadRequest")
-                .message(ex.getMessage())
-                .timestamp(LocalDateTime.now())
-                .build();
-    }
-}
